Adding a README.md file

--- a/simpleCalculator.html
+++ b/simpleCalculator.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head>
 <title> A simple calculator </title>
+</head>
 <body bgcolor="peacock">
-    <h1> A mini calculator </h1>
+    <h1 font-color="blue"> A mini calculator </h1>
     <p> A simple calculator that can perform the following arithmetic operations: <br> 
     <ol>
         <li>Addition</li>
